[metadata]
name = stacked
url = https://github.com/0compute/stacked
author = Arthur Noel
author-email = arthur@0compute.net
summary = Stacking utilities
license = GPL
keywords =
    context
    stack
tests-require =
    nose
    yanc
test-suite = nose.collector

[nosetests]
cover-inclusive = 1
cover-tests = 1
with-yanc = 1
