[metadata]
name = stacked
url = https://github.com/0compute/stacked
author = Arthur Noel
author-email = arthur@0compute.net
summary = Stacking utilities
license = GPL
keywords =
    context
    stack
tests-require =
    nose
    xtraceback
    yanc
test-suite = nose.collector

[nosetests]
with-yanc = 1
